--- a/packages/react/src/DuotoneText/DuotoneText.module.css
+++ b/packages/react/src/DuotoneText/DuotoneText.module.css
@@ -1,7 +1,7 @@
 .DuotoneText {
-  color: var(--duotone-color, var(--brand-DuotoneText-text-color-muted));
+  color: var(--brand-DuotoneText-text-color-muted);
 }
 
 .DuotoneText__emphasis {
-  color: var(--duotone-color, var(--brand-DuotoneText-text-color-emphasis, red));
+  color: var(--brand-DuotoneText-text-color-emphasis);
 }
