Use a <b> element instead of <span>

--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -73,7 +73,8 @@
   color: var(--brand-color-text-muted);
 }
 
-.Bento__heading--muted em {
+.Bento__heading--muted em,
+.Bento__heading--muted b {
   font-style: normal;
   color: var(--brand-color-text-default);
 }
