--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -75,8 +75,9 @@
 
 .Bento__heading--muted em,
 .Bento__heading--muted b {
-  font-style: normal;
   color: var(--brand-color-text-default);
+  font-style: normal;
+  font-weight: inherit;
 }
 
 .Bento__heading--with-max-width {
