--- a/packages/react/src/Timeline/Timeline.module.css
+++ b/packages/react/src/Timeline/Timeline.module.css
@@ -52,7 +52,7 @@
 .Timeline__item-text b {
   color: var(--brand-color-text-default);
   font-style: normal;
-  font-weight: 500; /* TODO: update with token when available */
+  font-weight: var(--base-text-weight-medium);
 }
 
 .Timeline__item a {
