--- a/packages/react/src/river/river-shared.module.css
+++ b/packages/react/src/river/river-shared.module.css
@@ -141,6 +141,7 @@
 .RiverBreakout .River__text b {
   color: var(--brand-color-text-default);
   font-style: normal;
+  font-weight: inherit;
 }
 
 .RiverBreakout .River__visual {
