Fix Testimonial font weight

--- a/packages/react/src/Testimonial/Testimonial.module.css
+++ b/packages/react/src/Testimonial/Testimonial.module.css
@@ -62,6 +62,7 @@
 .Testimonial-quote b {
   color: var(--brand-color-text-default);
   font-style: normal;
+  font-weight: inherit;
 }
 
 .Testimonial__media {
