--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -73,9 +73,11 @@
   color: var(--brand-color-text-muted);
 }
 
-.Bento__heading--muted em {
-  font-style: normal;
+.Bento__heading--muted em,
+.Bento__heading--muted b {
   color: var(--brand-color-text-default);
+  font-style: normal;
+  font-weight: inherit;
 }
 
 .Bento__heading--with-max-width {
