--- a/packages/react/src/SectionIntro/SectionIntro.module.css
+++ b/packages/react/src/SectionIntro/SectionIntro.module.css
@@ -10,9 +10,11 @@
   color: var(--brand-color-text-muted);
 }
 
-.SectionIntro-heading--muted em {
-  font-style: normal;
+.SectionIntro-heading--muted em,
+.SectionIntro-heading--muted b {
   color: var(--brand-color-text-default);
+  font-style: normal;
+  font-weight: inherit;
 }
 
 .SectionIntro--align-start {
