--- a/packages/react/src/Testimonial/Testimonial.module.css
+++ b/packages/react/src/Testimonial/Testimonial.module.css
@@ -58,9 +58,11 @@
   color: var(--brand-color-text-muted);
 }
 
-.Testimonial-quote em {
+.Testimonial-quote em,
+.Testimonial-quote b {
   color: var(--brand-color-text-default);
   font-style: normal;
+  font-weight: inherit;
 }
 
 .Testimonial__media {
