--- a/packages/react/src/river/river-shared.module.css
+++ b/packages/react/src/river/river-shared.module.css
@@ -137,9 +137,11 @@
   color: var(--brand-color-text-subtle);
 }
 
-.RiverBreakout .River__text em {
+.RiverBreakout .River__text em,
+.RiverBreakout .River__text b {
   color: var(--brand-color-text-default);
   font-style: normal;
+  font-weight: inherit;
 }
 
 .RiverBreakout .River__visual {
