--- a/packages/react/src/river/river-shared.module.css
+++ b/packages/react/src/river/river-shared.module.css
@@ -87,7 +87,10 @@
     grid-area: content;
   }
 
-  .River--align-start .River__content,
+  .River--align-start .River__content {
+    padding-inline-end: var(--base-size-128);
+  }
+
   .River--align-end .River__content {
     padding-inline: var(--base-size-64);
   }
