--- a/packages/react/src/river/river-shared.module.css
+++ b/packages/react/src/river/river-shared.module.css
@@ -87,6 +87,14 @@
     grid-area: content;
   }
 
+  .River--align-start .River__content {
+    padding-inline-end: var(--base-size-128);
+  }
+
+  .River--align-end .River__content {
+    padding-inline: var(--base-size-64);
+  }
+
   .River__visual {
     grid-area: visual;
     order: unset;
