--- a/packages/react/src/river/river-shared.module.css
+++ b/packages/react/src/river/river-shared.module.css
@@ -166,6 +166,10 @@
   width: 1px;
 }
 
+.RiverBreakout .River__call-to-action {
+  margin-block-end: var(--base-size-40);
+}
+
 @media screen and (min-width: 48rem) {
   .RiverBreakout .River__content {
     display: grid;
@@ -174,20 +178,21 @@
       'text trailingComponent'
       'cta trailingComponent';
     grid-template-columns: 5fr 3fr;
+    grid-auto-rows: auto 1fr;
+  }
+
+  .RiverBreakout .River__text {
+    grid-area: text;
   }
 
   .RiverBreakout .River__call-to-action {
     grid-area: cta;
-    margin-block-start: 0;
+    margin-block: 0;
   }
 
   .RiverBreakout .River__trailingComponent {
     grid-area: trailingComponent;
     justify-self: end;
     margin-block-start: 0;
-  }
-
-  .RiverBreakout .River__text {
-    grid-area: text;
   }
 }
