use min-height in Button component

--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -162,7 +162,7 @@
 /* size */
 
 .Button--size-small {
-  height: var(--brand-control-small-size);
+  min-height: var(--brand-control-small-size);
   padding: var(--brand-control-small-paddingBlock) var(--brand-control-small-paddingInline-normal);
 }
 
@@ -172,12 +172,12 @@
 }
 
 .Button--size-medium {
-  height: var(--brand-control-medium-size);
+  min-height: var(--brand-control-medium-size);
   padding: var(--brand-control-medium-paddingBlock) var(--brand-control-medium-paddingInline-spacious);
 }
 
 .Button--size-large {
-  height: var(--brand-control-large-size);
+  min-height: var(--brand-control-large-size);
   padding: var(--brand-control-large-paddingBlock) var(--brand-control-large-paddingInline-spacious);
 }
 
