Fix Button component reflow (#774)
* use min-height in Button component

* fix incorrect class name

* add changeset

* remove block padding

* update snapshots

* correct AnchorNav button padding

* update snapshots

--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -162,29 +162,29 @@
 /* size */
 
 .Button--size-small {
-  height: var(--brand-control-small-size);
-  padding: var(--brand-control-small-paddingBlock) var(--brand-control-small-paddingInline-normal);
-}
-
-.Button--label-large {
-  font-size: var(--brand-text-subhead-size-medium);
-  line-height: var(--brand-text-subhead-lineHeight-medium);
+  min-height: var(--brand-control-small-size);
+  padding-inline: var(--brand-control-small-paddingInline-normal);
 }
 
 .Button--size-medium {
-  height: var(--brand-control-medium-size);
-  padding: var(--brand-control-medium-paddingBlock) var(--brand-control-medium-paddingInline-spacious);
+  min-height: var(--brand-control-medium-size);
+  padding-inline: var(--brand-control-medium-paddingInline-spacious);
 }
 
 .Button--size-large {
-  height: var(--brand-control-large-size);
-  padding: var(--brand-control-large-paddingBlock) var(--brand-control-large-paddingInline-spacious);
+  min-height: var(--brand-control-large-size);
+  padding-inline: var(--brand-control-large-paddingInline-spacious);
 }
 
 .Button--size-large .Button__icon-visual,
 .Button--size-large .Button-arrow {
   height: var(--base-size-20);
   width: var(--base-size-20);
+}
+
+.Button--label-medium {
+  font-size: var(--brand-text-subhead-size-medium);
+  line-height: var(--brand-text-subhead-lineHeight-medium);
 }
 
 .Button--label-large {
