--- a/packages/react/src/Icon/Icon.module.css
+++ b/packages/react/src/Icon/Icon.module.css
@@ -1,8 +1,3 @@
-.Icon svg {
-  width: var(--base-size-20);
-  height: var(--base-size-20);
-}
-
 .Icon--badge {
   width: var(--base-size-44);
   height: var(--base-size-44);
@@ -10,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: var(--base-size-12);
 }
 
 .Icon--color-default {
