--- a/packages/react/src/forms/FormControl/FormControl.module.css
+++ b/packages/react/src/forms/FormControl/FormControl.module.css
@@ -10,10 +10,8 @@
 }
 
 .FormControl--checkbox {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+  display: grid;
+  grid-template-columns: auto 1fr;
 }
 
 .FormControl--border {
@@ -115,4 +113,8 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.FormControl-validation-checkbox {
+  grid-column: 1 / 3;
 }
