--- a/packages/react/src/forms/FormControl/FormControl.module.css
+++ b/packages/react/src/forms/FormControl/FormControl.module.css
@@ -65,6 +65,7 @@
 }
 
 .FormControl-hint {
+  grid-column: 1 / 3;
   color: var(--brand-color-text-muted);
   display: block;
   font-size: var(--brand-text-size-200);
