--- a/packages/react/src/SubNav/SubNav.module.css
+++ b/packages/react/src/SubNav/SubNav.module.css
@@ -230,10 +230,10 @@
   }
 
   .SubNav__link {
+    display: inline-block;
     text-decoration: none !important; /* dotcom override */
     transition: color 0.2s var(--brand-animation-easing-glide);
     position: relative;
-    padding: 4px 0;
   }
 
   .SubNav__link:hover *,
