--- a/packages/react/src/Icon/Icon.module.css
+++ b/packages/react/src/Icon/Icon.module.css
@@ -1,11 +1,27 @@
-.Icon--background {
+.Icon {
+  box-sizing: content-box;
   border-radius: 9999px;
   padding: var(--base-size-12);
-  box-sizing: content-box;
 }
 
 .Icon--noBackground {
   background-color: initial !important;
+}
+
+.Icon--padding-8 {
+  padding: var(--base-size-8);
+}
+
+.Icon--padding-12 {
+  padding: var(--base-size-12);
+}
+
+.Icon--padding-16 {
+  padding: var(--base-size-16);
+}
+
+.Icon--padding-20 {
+  padding: var(--base-size-20);
 }
 
 .Icon--color-default {
