--- a/packages/react/src/Icon/Icon.module.css
+++ b/packages/react/src/Icon/Icon.module.css
@@ -1,11 +1,7 @@
 .Icon {
   box-sizing: content-box;
-  border-radius: 9999px;
+  border-radius: var(--brand-borderRadius-full);
   padding: var(--base-size-12);
-}
-
-.Icon--noBackground {
-  background-color: initial !important;
 }
 
 .Icon--padding-8 {
@@ -26,70 +22,112 @@
 
 .Icon--color-default {
   color: var(--brand-Icon-color-default);
+}
+
+.Icon--background-color-default {
   background-color: var(--brand-Icon-background-default);
 }
 
 .Icon--color-blue {
   color: var(--brand-Icon-color-blue);
+}
+
+.Icon--background-color-blue {
   background-color: var(--brand-Icon-background-blue);
 }
 
 .Icon--color-coral {
   color: var(--brand-Icon-color-coral);
+}
+
+.Icon--background-color-coral {
   background-color: var(--brand-Icon-background-coral);
 }
 
 .Icon--color-green {
   color: var(--brand-Icon-color-green);
+}
+
+.Icon--background-color-green {
   background-color: var(--brand-Icon-background-green);
 }
 
 .Icon--color-gray {
   color: var(--brand-Icon-color-gray);
+}
+
+.Icon--background-color-gray {
   background-color: var(--brand-Icon-background-gray);
 }
 
 .Icon--color-indigo {
   color: var(--brand-Icon-color-indigo);
+}
+
+.Icon--background-color-indigo {
   background-color: var(--brand-Icon-background-indigo);
 }
 
 .Icon--color-lemon {
   color: var(--brand-Icon-color-lemon);
+}
+
+.Icon--background-color-lemon {
   background-color: var(--brand-Icon-background-lemon);
 }
 
 .Icon--color-lime {
   color: var(--brand-Icon-color-lime);
+}
+
+.Icon--background-color-lime {
   background-color: var(--brand-Icon-background-lime);
 }
 
 .Icon--color-orange {
   color: var(--brand-Icon-color-orange);
+}
+
+.Icon--background-color-orange {
   background-color: var(--brand-Icon-background-orange);
 }
 
 .Icon--color-pink {
   color: var(--brand-Icon-color-pink);
+}
+
+.Icon--background-color-pink {
   background-color: var(--brand-Icon-background-pink);
 }
 
 .Icon--color-purple {
   color: var(--brand-Icon-color-purple);
+}
+
+.Icon--background-color-purple {
   background-color: var(--brand-Icon-background-purple);
 }
 
 .Icon--color-red {
   color: var(--brand-Icon-color-red);
+}
+
+.Icon--background-color-red {
   background-color: var(--brand-Icon-background-red);
 }
 
 .Icon--color-teal {
   color: var(--brand-Icon-color-teal);
+}
+
+.Icon--background-color-teal {
   background-color: var(--brand-Icon-background-teal);
 }
 
 .Icon--color-yellow {
   color: var(--brand-Icon-color-yellow);
+}
+
+.Icon--background-color-yellow {
   background-color: var(--brand-Icon-background-yellow);
 }
