--- a/apps/docs/src/@primer/gatsby-theme-doctocat/components/hero-layout.module.css
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/components/hero-layout.module.css
@@ -8,6 +8,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: row;
+  /* padding: var(--base-size-24); */
 }
 
 .HeroLayoutSidebarWrapper {
@@ -20,7 +21,6 @@
 
 .HeroLayoutMain {
   padding: var(--base-size-24);
-  padding-bottom: var(--base-size-16);
   width: 100%;
   @media screen and (max-width: 48rem) {
     padding-bottom: 0;
@@ -28,8 +28,7 @@
 }
 
 .LandingPageLayout {
-  padding: 0 var(--base-size-48);
-  @media screen and (max-width: 48rem) {
-    padding: 0 0;
-  }
+  max-width: 1340px;
+  margin: 0 auto;
+  width: 100%;
 }
