remove Icon padding when hasBackground=false

--- a/packages/react/src/Icon/Icon.module.css
+++ b/packages/react/src/Icon/Icon.module.css
@@ -1,7 +1,11 @@
 .Icon {
   box-sizing: content-box;
-  border-radius: var(--brand-borderRadius-full);
+  padding: 0;
+}
+
+.Icon--background {
   padding: var(--base-size-12);
+  border-radius: var(--brand-borderRadius-full);
 }
 
 .Icon--padding-8 {
