--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -145,6 +145,7 @@
 .Card--skew {
   height: 100%;
   border-radius: var(--brand-borderRadius-large);
+  overflow: hidden;
 }
 
 .Card--skew:focus-within {
